force-app/main/default/objects/SFDC_Invoices__c/SFDC_Invoices__c.object-meta.xml
<CustomObject>
    <description>Tie an Invoice to a Purchase Order, and track Approvals that authorize these invoices to be paid.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>