force-app/main/default/objects/SFDC_Invoices__c/fields/ap_manager__c.field-meta.xml
<CustomField>
    <fullName>ap_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AP Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N40000001Q7F3EAK</relationshipName>
    <type>Lookup</type>
</CustomField>