force-app/main/default/objects/SFDC_Invoices__c/fields/Late_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Late_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Penalty</label>
    <type>Checkbox</type>
</CustomField>