force-app/main/default/objects/SFDC_Invoices__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>SFDC_Purchase_Order__c</referenceTo>
    <relationshipName>R00N40000001Q7EyEAK</relationshipName>
    <type>Lookup</type>
</CustomField>