force-app/main/default/objects/SFDC_Invoices__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N40000001Q7EzEAK</relationshipName>
    <type>Lookup</type>
</CustomField>