force-app/main/default/objects/SFDC_Invoices__c/listViews/AllInvoices.listView-meta.xml
<ListView>
    <fullName>AllInvoices</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>