force-app/main/default/objects/SFDC_Invoices__c/listViews/PendingInvoices.listView-meta.xml
<ListView>
    <fullName>PendingInvoices</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Vendor__c</columns>
    <columns>ap_manager__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Pending Invoices</label>
</ListView>